--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -143,7 +143,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <i class="fa fa-download"></i> <a class="w3-bar-item w3-button" href="https://drive.google.com/file/d/1xmyn0D2wZ5xNZhMpGUCANxBYXmRafQBG/view?usp=drive_link">Download Resume</a> 
+      <i class="fa fa-download"></i> <a class="w3-bar-item w3-button" href="https://drive.google.com/file/d/17S-ytOMH59y_anjYj9bolcgieHf-tDSo/view?usp=sharing">Download Resume</a> 
     </button>
   
     <!-- Certifications Section -->
